--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 
 body{
-  background: url("./assets/bgSVG.svg") ;
+  background: url("./assets/flat-mountains.svg") ;
   background-attachment: fixed;
     background-size: cover;
     background-position: center;
