--- a/client/src/layout/layout.css
+++ b/client/src/layout/layout.css
@@ -3,7 +3,10 @@
   justify-content: space-between;
   padding: 5px 20px;
   height: 100px;
- background-color: aquamarine;
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, .15);
+  backdrop-filter: blur(5px);
   align-items: center;
 }
 
