--- a/client/src/components/component.css
+++ b/client/src/components/component.css
@@ -1,7 +1,7 @@
 .aboutme-container{
 background: inherit;
 width: 100%;
-margin-top: 100px;
+margin-top: 0px;
 padding: 50px 0px;
 z-index: 3;
 position: relative;
@@ -41,7 +41,7 @@ display: flex;
 flex-direction: column;
 align-items: center;
 gap: 50px;
-margin-top: 70vh;
+margin-top: 0vh;
 box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
 border-radius: 5px;
 background-color: rgba(255, 255, 255, .15);
@@ -71,7 +71,7 @@ font-size: 1.5rem;
 padding: 30px;
 }
 
-#projects-title{
+.projects-title{
   font-size: 2.5rem;
   color: white;
 }
@@ -79,7 +79,7 @@ padding: 30px;
 /* ================= */
 
 .icon-page{
-  margin: 50vh auto;
+  margin:0px auto;
   padding: 50px;
   box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
 border-radius: 5px;
@@ -110,4 +110,9 @@ padding: 50px;
 
 #icon{
 
+}
+
+.blocker{
+  height: 100px;
+  margin-top: 50vh;
 }
