--- a/client/src/layout/layout.css
+++ b/client/src/layout/layout.css
@@ -8,6 +8,11 @@
   background-color: rgba(255, 255, 255, .15);
   backdrop-filter: blur(5px);
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
 }
 
 .nav-links{
@@ -18,5 +23,10 @@
 
 .nav-title{
   font-size: 1.5rem;
+}
+
+#nav-link-font{
+  text-decoration: none;
+  font-size: 1.25rem;
 
 }
