--- a/client/src/components/component.css
+++ b/client/src/components/component.css
@@ -17,21 +17,26 @@ backdrop-filter: blur(5px);
 }
 
 .aboutme-title{
-  
-background: inherit;
+
 font-size: 2.5rem;
 text-align: center;
-color: white;
+
 }
 
 .aboutme-p{
   font-size: 1.5rem;
+  
 }
 
 .aboutme-text{
   display: flex;
   flex-direction: column;
   width: 40vw;
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, .15);
+  backdrop-filter: blur(5px);
+  padding: 20px;  
 }
 
 /* ============================= */
