--- a/client/src/layout/layout.css
+++ b/client/src/layout/layout.css
@@ -8,7 +8,7 @@
   background-color: rgba(255, 255, 255, .15);
   backdrop-filter: blur(5px);
   align-items: center;
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
@@ -51,4 +51,31 @@ color: black;
   font-size: 1.5rem;
 }
 
+.intro-page{
+  height: 100vh;
+  z-index: 10000;
+}
 
+.landing-block{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+padding: 50px;
+  gap: 100px;
+  width: 90vw;
+  height: 90vh;
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, .15);
+  backdrop-filter: blur(5px);
+  margin: 50px auto;
+}
+
+.landing-title{
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.landing-button{
+  width: 100px;
+}
