--- a/client/src/layout/layout.css
+++ b/client/src/layout/layout.css
@@ -31,6 +31,10 @@
 color: black;
 }
 
+.website-logo{
+  width: 270px;
+}
+
 /* ============== */
 
 .footer-container{
@@ -84,7 +88,7 @@ padding: 50px;
   width: 100%;
   height: 100%;
   font-size: 2rem;
-  
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -92,5 +96,9 @@ padding: 50px;
 
  .landing-block{
    width: 350px;
+ }
+
+ .nav-links{
+   transform: scale(0);
  }
 }
